--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name" translatable="false">SUPLA</string>
+    <string name="app_name" translatable="false">VUHAZU</string>
     <string name="slogan" translatable="false">"YOUR HOME CONNECTED"</string>
     <string name="menubar_title" translatable="false">supla</string>
     <string name="homepage" translatable="false">www.supla.org</string>
